2009-05-14       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  convert constants to
	  integer if they are to be passed to a C stdarg function.
	* gm2/gm2-compiler/M2Quads.mod:  pass the address field
	  of an unbounded array if it is an argument to a
	  C stdarg function.
	* gm2/gm2-compiler/M2GenGCC.mod:  removed function
          DefaultCStdArgPromotion and fixed test code.
	* gm2/gm2.texi:  documented behaviour of stdarg parameters.

2009-05-11       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  added Sets.def and Sets.mod to
	  the list of compiler modules.
        * gm2/bnf/m2-h.bnf:  ConstActualParameters added so that
	  constant functions may be used in constant expressions
	  within modules declaring opaque types.
        * gm2/gm2-compiler/M2GCCDeclare.mod:  altered many of the
	  List data types to Set where appropriate.  Fixed
	  unbounded types to be walked just like all other types.
	  In turn refactored unbounded declarations.  Added test
	  to detect recursive calls to ForeachTryDeclare.
	* gm2/gm2-libs/ASCII.def:  fixed dates.
	* gm2/gm2-libs/Storage.mod:  fixed dates.
	* gm2/gm2-libs/SysStorage.mod:  fixed copyright notice.
	* gm2/init/gm2-gccinit:  added Sets.
	* gm2/p2c/p2c-src/src/decl.c:  fixed declaration of
	  BITSET so that MAX(BITSET) and MIN(BITSET) yield
	  correct values.

2009-05-06       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GCCDeclare.mod:  TryDeclareConst
	  now calls TryDeclareConstructor.
	* gm2/gm2-compiler/M2Range.mod:  modified all calls to
	  DeclareConstructor to TryDeclareConstructor.
	* gm2/gm2-compiler/SymbolTable.mod:  corrected dates.
	* gm2/gm2-compiler/M2GenGCC.mod:  detect if op3 is a
	  procedure in CodeConvert and if so calculate the
	  address of the procedure.
	* gm2/gm2-compiler/M2Quads.mod:  allow procedures as
	  the operand to cast/convert.  Changed
	  CheckVariabelOrConstant to
	  CheckVariabelOrConstantOrProcedure.