@@ -1,5 +1,6 @@
 /* Definitions for specs for GNU Modula-2.
-   Copyright (C) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008
+   Copyright (C) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008,
+                 2009
    Free Software Foundation, Inc.
    Contributed by Gaius Mulley.
 
@@ -53,8 +54,8 @@ Boston, MA 02110-1301, USA.  */
       %{!c:%{!S:%{!gm2gcc:%{!fuselist:%{fcpp:cc1%s -E -lang-asm -traditional-cpp -quiet %(cpp_unique_options) -o %g.mod \n\
                                              gm2l -fcppbegin %:exec_prefix(cc1%s) -E -lang-asm -traditional-cpp -quiet %(cpp_unique_options) -fcppend %{I*} %{fdef=*} %{fmod=*} %{!pipe:-o %g.l} %g.mod |\n\
                                              gm2lorder %{fruntime-modules=} %{!pipe:%g.l} -o %g.lst \n\
-                                             gm2lgen %{fshared} %{fshared:-terminate -exit} -cpp %g.lst -o %g.cpp \n\
-                                             gm2cc %{v*} %{B*} %{g*} %{O*} %{fPIC} %{fpic} -c -o %ustart%d%O %g.cpp \n\
+                                             gm2lgen %{fshared} %{fshared:-terminate -exit} -cpp %g.lst -o %{!g:%g.cpp} %{g:%b_m2.cpp} \n\
+                                             gm2cc %{v*} %{B*} %{g*} %{O*} %{fPIC} %{fpic} -c -o %ustart%d%O %{!g:%g.cpp} %{g:%b_m2.cpp} \n\
                                              rm -f %w%d%g.a \n\
                                              gm2lcc %{fshared} %{fpic} %{fPIC} %{B*} %{ftarget-ar=*} %{ftarget-ranlib=*} \
                                                     %{fobject-path=*} %{v} -exec -startup %Ustart%d%O \
@@ -62,15 +63,15 @@ Boston, MA 02110-1301, USA.  */
                                                     %{fshared:%w%{o:%{o*}}%:nolink() %:objects() %:linkargs() } %g.lst } \n\
                                       %{!fcpp:gm2l %{I*} %{fdef=*} %{fmod=*} %{!pipe:-o %g.l} %i |\n\
                                              gm2lorder %{fruntime-modules=} %{!pipe:%g.l} -o %g.lst \n\
-                                             gm2lgen %{fshared} %{fshared:-terminate -exit} -cpp %g.lst -o %g.cpp \n\
-                                             gm2cc %{v*} %{B*} %{g*} %{O*} %{fPIC} %{fpic} -c -o %ustart%d%O %g.cpp \n\
+                                             gm2lgen %{fshared} %{fshared:-terminate -exit} -cpp %g.lst -o %{!g:%g.cpp} %{g:%b_m2.cpp} \n\
+                                             gm2cc %{v*} %{B*} %{g*} %{O*} %{fPIC} %{fpic} -c -o %ustart%d%O %{!g:%g.cpp} %{g:%b_m2.cpp} \n\
                                              rm -f %w%d%g.a \n\
                                              gm2lcc %{fshared} %{fpic} %{fPIC} %{B*} %{ftarget-ar=*} %{ftarget-ranlib=*} \
                                                     %{fobject-path=*} %{v} -exec -startup %Ustart%d%O \
                                                     %{!fshared:-ar -o %w%d%g.a} \
                                                     %{fshared:%w%{o:%{o*}}%:nolink() %:objects() %:linkargs() } %g.lst }} \n\
-                           %{fuselist:gm2lgen %{fshared} %{fshared:-terminate -exit} -cpp %b.lst -o %g.cpp \n\
-                                      gm2cc %{v*} %{B*} %{g*} %{O*} %{fPIC} %{fpic} -c -o %ustart%d%O %g.cpp \n\
+                           %{fuselist:gm2lgen %{fshared} %{fshared:-terminate -exit} -cpp %b.lst -o %{!g:%g.cpp} %{g:%b_m2.cpp} \n\
+                                      gm2cc %{v*} %{B*} %{g*} %{O*} %{fPIC} %{fpic} -c -o %ustart%d%O %{!g:%g.cpp} %{g:%b_m2.cpp} \n\
                                       rm -f %Ustart%d.a \n\
                                       gm2lcc %{fshared} %{fpic} %{fPIC} %{B*} %{ftarget-ar=*} %{ftarget-ranlib=*} \
                                              %{fobject-path=*} %{v} -exec -startup %Ustart%d%O \
